infrastructure/kubernetes/overlays/pre-prod/apps/http-route-mcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp
spec:
  parentRefs:
    - name: preprod
      namespace: networking
  hostnames:
    - mcp.preprod.djepenodev.ink
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mcp
          port: 8001
