infrastructure/kubernetes/overlays/pre-prod/apps/http-route-nextjs.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextjs
spec:
  parentRefs:
    - name: preprod
      namespace: networking
  hostnames:
    - app.preprod.djepenodev.ink
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextjs
          port: 80
